# getmywork

./: README.md  pyproject.toml
getmywork/: __init__.py  main.py
